tests/snapshots/test_parser__valid_cases@valid_assignments.nz.snap
---
source: tests/test_parser.rs
input_file: tests/resources/parser_cases/valid_assignments.nz
---
Program {
    nodes: [
        Statement(
            Expression(
                ExpressionStatement {
                    span: Span {
                        start: Position {
                            offset: 0,
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            offset: 3,
                            line: 0,
                            column: 3,
                        },
                        file: FileId(
                            0,
                        ),
                    },
                    expression: Infix(
                        Identifier(
                            "foo",
                            Span {
                                start: Position {
                                    offset: 0,
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    offset: 3,
                                    line: 0,
                                    column: 3,
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        ),
                        Assignment,
                        Identifier(
                            "bar",
                            Span {
                                start: Position {
                                    offset: 6,
                                    line: 0,
                                    column: 6,
                                },
                                end: Position {
                                    offset: 9,
                                    line: 0,
                                    column: 9,
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        ),
                        Span {
                            start: Position {
                                offset: 0,
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                offset: 3,
                                line: 0,
                                column: 3,
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    ),
                },
            ),
        ),
        Statement(
            Expression(
                ExpressionStatement {
                    span: Span {
                        start: Position {
                            offset: 11,
                            line: 1,
                            column: 0,
                        },
                        end: Position {
                            offset: 14,
                            line: 1,
                            column: 3,
                        },
                        file: FileId(
                            0,
                        ),
                    },
                    expression: Infix(
                        Identifier(
                            "foo",
                            Span {
                                start: Position {
                                    offset: 11,
                                    line: 1,
                                    column: 0,
                                },
                                end: Position {
                                    offset: 14,
                                    line: 1,
                                    column: 3,
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        ),
                        Assignment,
                        NumericLiteral(
                            Integer(
                                3,
                            ),
                            Span {
                                start: Position {
                                    offset: 17,
                                    line: 1,
                                    column: 6,
                                },
                                end: Position {
                                    offset: 18,
                                    line: 1,
                                    column: 7,
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        ),
                        Span {
                            start: Position {
                                offset: 11,
                                line: 1,
                                column: 0,
                            },
                            end: Position {
                                offset: 14,
                                line: 1,
                                column: 3,
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    ),
                },
            ),
        ),
    ],
}
