tests/snapshots/test_parser__valid_cases@valid_identifiers.nz.snap
---
source: tests/test_parser.rs
input_file: tests/resources/parser_cases/valid_identifiers.nz
---
Program {
    nodes: [
        Statement(
            Expression(
                ExpressionStatement {
                    span: Span {
                        start: Position {
                            offset: 0,
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            offset: 3,
                            line: 0,
                            column: 3,
                        },
                        file: FileId(
                            0,
                        ),
                    },
                    expression: Identifier(
                        "foo",
                        Span {
                            start: Position {
                                offset: 0,
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                offset: 3,
                                line: 0,
                                column: 3,
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    ),
                },
            ),
        ),
        Statement(
            Expression(
                ExpressionStatement {
                    span: Span {
                        start: Position {
                            offset: 5,
                            line: 1,
                            column: 0,
                        },
                        end: Position {
                            offset: 8,
                            line: 1,
                            column: 3,
                        },
                        file: FileId(
                            0,
                        ),
                    },
                    expression: Identifier(
                        "bar",
                        Span {
                            start: Position {
                                offset: 5,
                                line: 1,
                                column: 0,
                            },
                            end: Position {
                                offset: 8,
                                line: 1,
                                column: 3,
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    ),
                },
            ),
        ),
        Expression(
            Identifier(
                "baz",
                Span {
                    start: Position {
                        offset: 10,
                        line: 2,
                        column: 0,
                    },
                    end: Position {
                        offset: 13,
                        line: 2,
                        column: 3,
                    },
                    file: FileId(
                        0,
                    ),
                },
            ),
        ),
    ],
}
