tests/snapshots/test_parser__valid_func_declarations.snap
---
source: tests/test_parser.rs
expression: output
input_file: tests/resources/parser_cases/valid_func_declarations.nz
---
Program {
    nodes: [
        Statement(
            FuncDeclaration(
                FuncDeclaration {
                    identifier: "foo",
                    paramemetrs: [
                        FuncParameter {
                            identifier: "bar",
                            ty: Name(
                                "int",
                            ),
                            span: Span {
                                start: Position {
                                    offset: 11,
                                    line: 0,
                                    column: 11,
                                },
                                end: Position {
                                    offset: 14,
                                    line: 0,
                                    column: 14,
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        },
                        FuncParameter {
                            identifier: "baz",
                            ty: Name(
                                "float",
                            ),
                            span: Span {
                                start: Position {
                                    offset: 23,
                                    line: 0,
                                    column: 23,
                                },
                                end: Position {
                                    offset: 26,
                                    line: 0,
                                    column: 26,
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        },
                    ],
                    body: Block {
                        nodes: [],
                        last_expression: Some(
                            Expression(
                                Infix(
                                    Identifier(
                                        "bar",
                                        Span {
                                            start: Position {
                                                offset: 50,
                                                line: 1,
                                                column: 2,
                                            },
                                            end: Position {
                                                offset: 53,
                                                line: 1,
                                                column: 5,
                                            },
                                            file: FileId(
                                                0,
                                            ),
                                        },
                                    ),
                                    Add,
                                    Identifier(
                                        "baz",
                                        Span {
                                            start: Position {
                                                offset: 56,
                                                line: 1,
                                                column: 8,
                                            },
                                            end: Position {
                                                offset: 59,
                                                line: 1,
                                                column: 11,
                                            },
                                            file: FileId(
                                                0,
                                            ),
                                        },
                                    ),
                                    Span {
                                        start: Position {
                                            offset: 50,
                                            line: 1,
                                            column: 2,
                                        },
                                        end: Position {
                                            offset: 53,
                                            line: 1,
                                            column: 5,
                                        },
                                        file: FileId(
                                            0,
                                        ),
                                    },
                                ),
                            ),
                        ),
                        span: Span {
                            start: Position {
                                offset: 46,
                                line: 0,
                                column: 46,
                            },
                            end: Position {
                                offset: 61,
                                line: 2,
                                column: 1,
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    },
                    return_type: Some(
                        Name(
                            "float",
                        ),
                    ),
                    span: Span {
                        start: Position {
                            offset: 0,
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            offset: 3,
                            line: 0,
                            column: 3,
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
            ),
        ),
        Statement(
            FuncDeclaration(
                FuncDeclaration {
                    identifier: "foo",
                    paramemetrs: [
                        FuncParameter {
                            identifier: "bar",
                            ty: Name(
                                "int",
                            ),
                            span: Span {
                                start: Position {
                                    offset: 74,
                                    line: 4,
                                    column: 11,
                                },
                                end: Position {
                                    offset: 77,
                                    line: 4,
                                    column: 14,
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        },
                        FuncParameter {
                            identifier: "baz",
                            ty: Name(
                                "float",
                            ),
                            span: Span {
                                start: Position {
                                    offset: 86,
                                    line: 4,
                                    column: 23,
                                },
                                end: Position {
                                    offset: 89,
                                    line: 4,
                                    column: 26,
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        },
                    ],
                    body: Block {
                        nodes: [
                            Statement(
                                Return(
                                    Return {
                                        expression: Infix(
                                            Identifier(
                                                "bar",
                                                Span {
                                                    start: Position {
                                                        offset: 122,
                                                        line: 5,
                                                        column: 11,
                                                    },
                                                    end: Position {
                                                        offset: 125,
                                                        line: 5,
                                                        column: 14,
                                                    },
                                                    file: FileId(
                                                        0,
                                                    ),
                                                },
                                            ),
                                            Add,
                                            Identifier(
                                                "baz",
                                                Span {
                                                    start: Position {
                                                        offset: 128,
                                                        line: 5,
                                                        column: 17,
                                                    },
                                                    end: Position {
                                                        offset: 131,
                                                        line: 5,
                                                        column: 20,
                                                    },
                                                    file: FileId(
                                                        0,
                                                    ),
                                                },
                                            ),
                                            Span {
                                                start: Position {
                                                    offset: 122,
                                                    line: 5,
                                                    column: 11,
                                                },
                                                end: Position {
                                                    offset: 125,
                                                    line: 5,
                                                    column: 14,
                                                },
                                                file: FileId(
                                                    0,
                                                ),
                                            },
                                        ),
                                        span: Span {
                                            start: Position {
                                                offset: 115,
                                                line: 5,
                                                column: 4,
                                            },
                                            end: Position {
                                                offset: 125,
                                                line: 5,
                                                column: 14,
                                            },
                                            file: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                            ),
                        ],
                        last_expression: None,
                        span: Span {
                            start: Position {
                                offset: 109,
                                line: 4,
                                column: 46,
                            },
                            end: Position {
                                offset: 134,
                                line: 6,
                                column: 1,
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    },
                    return_type: Some(
                        Name(
                            "float",
                        ),
                    ),
                    span: Span {
                        start: Position {
                            offset: 63,
                            line: 4,
                            column: 0,
                        },
                        end: Position {
                            offset: 66,
                            line: 4,
                            column: 3,
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
            ),
        ),
    ],
}
